--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,16 +3,12 @@
 
     <head>
         <title>My scratchboard page</title>
-{#        <link href="../static/css/main.css" rel="stylesheet">#}
         <meta charset="utf-8">
-{#        <meta http-equiv="X-UA-Compatible" content="IE=edge">#}
-{#        <meta name="viewport" content="width=device-width, initial-scale=1">#}
-
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     </head>
 
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-nav">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -26,39 +22,11 @@
         </div>
         </nav>
 
-
         <div class="container"><!-- /.container -->
 
+            {% block content %}
+            {% endblock %}
 
-
-            <div class="row">
-                This is the first dummy comment.
-            </div>
-
-            <div class="row">
-                This is the the second dummy comment.  It's no more interesting
-                than the first.
-            </div>
-
-            <div class="row">
-                This is the third dummy comment.  It's actually quite exciting!
-            </div>
-
-            <a href="{{ url_for('adder_page') }}" class="btn btn-success">Go To Adder Page</a>
-            <div>
-                <form action="." method="POST">
-                    <textarea name="contents" placeholder="Enter a comment" class="form-control"></textarea>
-                    <input type="submit" class="btn btn-success" value="Post comment">
-                </form>
-            </div>
         </div>
     </body>
-
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Scratchboard</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#</body>#}
 </html>
