database may work on pythonanywhere

--- a/templates/comments_page.html
+++ b/templates/comments_page.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for comment in comments %}
         <div class="row">
-            {{ comment }}
+            {{ comment.content }}
         </div>
     {% endfor %}
 
