--- a/templates/comments_page.html
+++ b/templates/comments_page.html
@@ -3,7 +3,10 @@
 {% block content %}
     {% for comment in comments %}
         <div class="row">
+{#            turn next line on in production ONLINE#}
             {{ comment.content }}
+{#            turn next line on in dev on LAPTOP #}
+{#            {{ comment }} #}
         </div>
     {% endfor %}
 
