trying to make my code switching work for where I'm running this

--- a/templates/comments_page.html
+++ b/templates/comments_page.html
@@ -4,9 +4,9 @@
     {% for comment in comments %}
         <div class="row">
 {#            turn next line on in production ONLINE#}
-            {{ comment.content }}
+{#            {{ comment.content }}#}
 {#            turn next line on in dev on LAPTOP #}
-{#            {{ comment }} #}
+            {{ comment }}
         </div>
     {% endfor %}
 
